# splean_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  conftest.py  nginx.conf  pyproject.toml
.github/workflows/: main.yml
album/: admin.py  managers.py  models.py  repositories.py
album/fixtures/: albums.json
album/migrations/: 0001_initial.py  0002_album_duration.py
album/tests/: test_api.py  test_models.py
album/v1/: serializers.py  urls.py  views.py
common/: pagination.py  serializers.py  validators.py  views.py
common/tests/: test_commands.py
core/: settings.py  urls.py
line/: admin.py  documents.py  elastic.py  managers.py  models.py  repositories.py
line/fixtures/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+170 more)
line/lists/: alcohol.py  petersburg.py  stop_words.py  winter.py
line/migrations/: 0001_initial.py
line/tests/: test_api.py
line/v1/: serializers.py  urls.py  views.py
song/: admin.py  documents.py  managers.py  models.py  repositories.py
song/fixtures/: albums.json  lines.json  songs.json
song/lists/: alcohol.py
song/migrations/: 0001_create_albums_songs_lines.py  0001_initial.py  0002_alter_song_duration.py  0003_alter_song_date.py
(+6 files in other folders)
